# wb_nav2_bringup

./: .gitignore  CMakeLists.txt  README.md  package.xml
configs/: apriltags_36h11.yaml  controller.yaml  dock_database.yaml  forklift_bridge.yaml  tb4_bridge.yaml
launch/: apriltag_dock_pose_publisher.launch.py  bringup_launch.py  cloned_multi_tb3_simulation_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  spawn_tb3.launch.py  spawn_tb4.launch.py  tb3_loopback_simulation.launch.py  tb3_simulation_launch.py  tb4_loopback_simulation.launch.py  tb4_simulation_launch.py  twist_to_multiarray.py  unique_multi_tb3_simulation_launch.py
maps/: depot.yaml
params/: forklift_nav2_params.yaml
rviz/: docking_view.rviz  nav2_default_view.rviz
scripts/: rx20_16.launch.sh  yolo_detector.py
src/: detected_dock_pose_publisher.cpp
urdf/: gz_waffle.sdf.xacro  turtlebot3_waffle.urdf
urdf/RX20_16/: base.xacro  camera.xacro  d435_camera.xacro  front_wheels.xacro  lib_ackermansteer.xacro  loading_forklift_joints.xacro  main.xacro  nav_lidar.xacro  steer_wheels.xacro  wheel_control.xacro
urdf/tb4_icreate/: caster.urdf.xacro  create3.urdf.xacro
urdf/tb4_sensors/: camera_bracket.urdf.xacro  oakd.urdf.xacro  rplidar.urdf.xacro
urdf/tb4_standard/: tower_sensor_plate.urdf.xacro  tower_standoff.urdf.xacro  turtlebot4.urdf.xacro  weight_block.urdf.xacro
worlds/: depot.sdf  pallet_world.sdf
